login align fixed

--- a/src/pages/Authentication/Login.scss
+++ b/src/pages/Authentication/Login.scss
@@ -4,7 +4,7 @@
   width: 564px;
   height: 100%;
   background-color: white;
-  margin: 20vh auto;
+  margin: 10vh auto;
   padding: 1rem;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.08);
   border-radius: 8px;
